--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -47,6 +47,11 @@ header nav ul li a {
   color: white;
 }
 
+img {
+  background-color: white;
+  border-radius: 50px;
+}
+
 .container {
   margin: 0 auto;
   margin-top: 15px;
@@ -70,4 +75,39 @@ footer {
   margin-top: 15px;
   padding: 1em;
   background-color: rgb(3, 72, 151);
+}
+
+button {
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-left: 3.2em;
+  padding: .5em;
+  border-style: none;
+  border-radius: 6px;
+  background-color: rgba(255, 255, 255, 0.65);
+  box-shadow: 3px 2px 3px rgba(255, 255, 255, 0.65);
+}
+
+#button-style:hover {
+  color: white;
+  background-color: rgb(61, 153, 0);
+  box-shadow: 3px 2px 3px rgba(51, 128, 0, 0.65);
+}
+
+#button-style:active {
+  background-color: rgba(0, 0, 0, 0.486);
+  color: white;
+  box-shadow: 0px 0px 8px 3px rgb(0, 37, 78) inset;
+}
+
+#btn-border-style:hover {
+  color: white;
+  background-color: rgb(38, 0, 255);
+  box-shadow: 3px 2px 3px rgba(38, 0, 255, .85);
+}
+
+#btn-border-style:active {
+  color: white;
+  background-color: rgb(12, 0, 80);
+  box-shadow: 0px 0px 8px 3px rgb(110, 110, 110) inset;
 }
