--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -69,6 +69,10 @@ button {
   box-shadow: 3px 2px 3px rgba(255, 255, 255, 0.65);
 }
 
+button:focus {
+  border-style: none;
+}
+
 .container {
   margin: 0 auto;
   margin-top: 15px;
@@ -142,6 +146,11 @@ section.container {
     border-bottom: 1.2px solid rgb(255, 255, 255);
   }
 
+  button {
+    margin: 0 auto;
+    margin-top: 15px;
+  }
+
   footer {
     text-align: center;
   }
@@ -181,6 +190,11 @@ section.container {
 
   header nav ul li a {
     border-bottom: 1.2px solid rgb(255, 255, 255);
+  }
+
+  button {
+    margin: 0 auto;
+    margin-top: 15px;
   }
 
   footer {
